app-k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
  namespace: app
  labels:
    app: app
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "latest"
spec:
  serviceName: app
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: app
  template:
    metadata:
      labels:
        namespace: app
        app: app
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: app
        app.kubernetes.io/version: "latest"
    spec:
      serviceAccountName: app-sa
      tolerations:
        []
      nodeSelector:
        {}
      affinity:
        {}
      terminationGracePeriodSeconds: 120
      #      initContainers:
      containers:
        - name: app
          image: smoogiee/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: app
