app-k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
  labels:
    app: app
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "latest"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
