app-k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: app
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "latest"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.smoogiee.com
      secretName: app-tls
  rules:
    - host: app.smoogiee.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-svc
                port:
                  number: 8080
